	runtime manipulation functions. EXPERIMENTAL
	* Headers/gnustep/base/GSObjCRuntime.h: declarations for above.
	* Source/GSCompatibility.m: Don't use new format plists when writing
	descriptions.
	Also, honor NSWriteOldStylePropertyLists user default to write old
	style property-lists rather than new style or xml style.
	* Source/NSUser.m: Use USERPROFILE for default home directory on
	windoze.

2002-11-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GCObject.m: Attempt to make garbage collecting
	thread-safe.
	* Source/Additions/GCArray.m: Fix count initialising mutable array.
	* Source/Additions/GSMime.m: Provide a method to generate and return
	a string suitable for use as a boundary.  Make tolerant of multipart
	messages with 'application' as the message type.
	Added ([-setBuggyQuotes:]) method for parsing stuff produced by
	microsoft ;-(

2002-11-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Treat '-' on its own as an argument
	rather than the start of a flag name.
	* Source/Additions/GSMime.m: Place angle brackets around generated
	content ID. Add method to generate message ID.  Tidy comments a
	little.

2002-11-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/libgnustep-base.def: Add garbage collecting classes.

2002-11-20  Adam Fedor  <fedor@gnu.org>

	* Source/NSBundle.m (+preferredLocalizationsFromArray:forPreferences:): 
	Check for array with no objects.
	([NSBundle -localizedInfoDictionary]): Idem.

2002-11-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Work around bug in the redhat 8 iconv
	library ... was sucessfully opening the encoding "" when it shouldn't.

2002-11-19  Adam Fedor  <fedor@gnu.org>

	* Version: 1.5.1
	* Documentation/news.texi: Updated.

2002-11-19  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSBundle.h: More documentation. Add missing
	MacOSX methods.
	* Source/NSBundle.m (-executablePath): New
	(-load): Use it.