@@ -743,18 +743,19 @@ compareIt(id o1, id o2, void* context)
 {
   NSDictionary	*loc = GSUserDefaultsDictionaryRepresentation();
   NSString	*desc = nil;
+  NSData	*data;
 
   if (GSMacOSXCompatiblePropertyLists() == YES)
     {
       GSPropertyListMake(self, loc, YES, NO, 2, &desc);
+      data = [desc dataUsingEncoding: NSUTF8StringEncoding];
     }
   else
     {
       GSPropertyListMake(self, loc, NO, NO, 2, &desc);
+      data = [desc dataUsingEncoding: NSASCIIStringEncoding];
     }
-
-  return [[desc dataUsingEncoding: NSUTF8StringEncoding]
-    writeToFile: path atomically: useAuxiliaryFile];
+  return [data writeToFile: path atomically: useAuxiliaryFile];
 }
 
 /**
@@ -767,18 +768,20 @@ compareIt(id o1, id o2, void* context)
 {
   NSDictionary	*loc = GSUserDefaultsDictionaryRepresentation();
   NSString	*desc = nil;
+  NSData	*data;
 
   if (GSMacOSXCompatiblePropertyLists() == YES)
     {
       GSPropertyListMake(self, loc, YES, NO, 2, &desc);
+      data = [desc dataUsingEncoding: NSUTF8StringEncoding];
     }
   else
     {
       GSPropertyListMake(self, loc, NO, NO, 2, &desc);
+      data = [desc dataUsingEncoding: NSASCIIStringEncoding];
     }
 
-  return [[desc dataUsingEncoding: NSUTF8StringEncoding]
-    writeToURL: url atomically: useAuxiliaryFile];
+  return [data writeToURL: url atomically: useAuxiliaryFile];
 }
 
 /**
